--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,26 +6,57 @@
     android:background="@color/orange">
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="260dp"
         android:layout_height="wrap_content"
-        android:src="@drawable/logo" />
+        android:src="@drawable/logo_dark"
+        android:layout_marginBottom="50dp"
+        />
 
     <EditText
         android:id="@+id/etEmail"
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:hint="Email" />
+        android:hint="Email"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
+        android:background="@drawable/login_input"
+        android:padding="12dp"
+        />
 
     <EditText
         android:id="@+id/etPassword"
-        android:layout_width="match_parent"
+        android:padding="12dp"
+        android:layout_marginTop="16dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:hint="Mot de passe"
+        android:textColorHint="@android:color/white"
+        android:textColor="@color/white"
+        android:background="@drawable/login_input"
         android:inputType="textPassword"/>
-
+    <TextView
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="12dp"
+        android:layout_marginLeft="40dp"
+        android:textColor="@color/black"
+        android:text="Mot de passe Oublié ?"
     <Button
         android:id="@+id/btnLogin"
+        android:width="250dp"
+        android:layout_marginTop="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/white"
+        android:textColor="@color/orange"
+        android:textSize="22sp"
         android:text="S’identifier"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_marginTop="16dp"
+        android:textSize="12sp"
+        android:textColor="@color/white"
+        android:layout_height="wrap_content"
+        android:text="Vous avez déjà un compte? S'inscrire"
 </LinearLayout>
