--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -5,35 +5,46 @@
     android:gravity="center"
     android:background="@color/orange">
 
-    <ImageView
-        android:id="@+id/logoImage"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="32dp"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/logo_dark" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/logoImage"
+            android:layout_width="260dp"
+            android:layout_height="110dp"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/logo_dark" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/btnSignup"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="S’inscrire"
-        android:textSize="22sp"
-        android:padding="20dp"
         android:backgroundTint="@color/black"
-        android:textColor="@android:color/white"/>
+        android:padding="20dp"
+        android:text="S’inscrire"
+        android:textColor="@android:color/white"
+        android:textSize="22sp" />
 
     <Button
         android:id="@+id/btnLoginRedirect"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:text="S’identifier"
-        android:background=""
         android:textSize="22sp"
+        android:textColor="@color/white"
+        android:background="@drawable/border"
         android:layout_margin="16dp"
-        android:shadowRadius="@integer/material_motion_duration_long_1"
-        />
+        android:padding="12dp"
+        android:elevation="0dp"
+        android:stateListAnimator="@null"
+        android:backgroundTint="@null"
+        style="?android:attr/borderlessButtonStyle"/>  <!-- Forces default button style to be removed -->
+
 
     <TextView
         android:layout_width="292dp"
@@ -41,5 +52,5 @@
         android:layout_margin="20dp"
         android:gravity="center"
         android:text="En vous inscrivant, vous acceptez nos conditions d'utilisation et notre politique de confidentialité."
-        android:textColor="@color/white"
+        android:textColor="@color/white"/>
 </LinearLayout>
