--- a/app/src/main/res/layout/activity_signup_form.xml
+++ b/app/src/main/res/layout/activity_signup_form.xml
@@ -12,10 +12,10 @@
         android:src="@drawable/logo_dark" />
 
     <EditText
-        android:id="@+id/etEmail"
+        android:id="@+id/First_Name"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:hint="Email"
+        android:hint="First Name"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
         android:background="@drawable/login_input"
@@ -23,12 +23,56 @@
         />
 
     <EditText
+        android:id="@+id/Last_Name"
+        android:padding="12dp"
+        android:layout_marginTop="16dp"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:hint="Last Name"
+        android:textColorHint="@android:color/white"
+        android:textColor="@color/white"
+        android:background="@drawable/login_input"
+        android:inputType="textPassword"/>
+    <EditText
+        android:id="@+id/Phone"
+        android:padding="12dp"
+        android:layout_marginTop="16dp"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:hint="Phone"
+        android:textColorHint="@android:color/white"
+        android:textColor="@color/white"
+        android:background="@drawable/login_input"
+        android:inputType="textPassword"/>
+    <EditText
+        android:id="@+id/Birth_Date"
+        android:padding="12dp"
+        android:layout_marginTop="16dp"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:hint="Birth Date"
+        android:textColorHint="@android:color/white"
+        android:textColor="@color/white"
+        android:background="@drawable/login_input"
+        android:inputType="textPassword"/>
+    <EditText
+        android:id="@+id/etEmail"
+        android:padding="12dp"
+        android:layout_marginTop="16dp"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:hint="Email"
+        android:textColorHint="@android:color/white"
+        android:textColor="@color/white"
+        android:background="@drawable/login_input"
+        android:inputType="textPassword"/>
+    <EditText
         android:id="@+id/etPassword"
         android:padding="12dp"
         android:layout_marginTop="16dp"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:hint="Mot de passe"
+        android:hint="Password"
         android:textColorHint="@android:color/white"
         android:textColor="@color/white"
         android:background="@drawable/login_input"
